# python-card-deck

./: README.md  pyproject.toml
src/pycards/: base_deck.py  exceptions.py
src/pycards/decks/: playing_cards.py
tests/: test_playing_cards.py
