[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycards"
version = "0.0.1"
authors = [
  { name="Brady Woods", email="blawoods@icloud.com" },
]
description = "A quick python package for implementing a deck of cards."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/blw216/python-card-deck"
"Bug Tracker" = "https://github.com/blw216/python-card-deck/issues"